unpackaged/main/default/objects/cmbls__Fund__c/fields/Chart_of_Accounts_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Accounts_Prefix__c</fullName>
    <label>Chart of Accounts Prefix</label>
    <length>2</length>
    <type>Text</type>
</CustomField>