unpackaged/main/default/objects/cmbls__Fund__c/fields/cmbls__Default_Debit_ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Default_Debit_ACH_Processor__c</fullName>
    <inlineHelpText>When transferring Loans to this Fund, this ACH processor will be the default in the loan Transfer UI for each Repayment being transferred.</inlineHelpText>
    <label>Default Debit ACH Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo - NF Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFAS2 Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NF Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - QBF Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFSPV1 Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFSPV2 Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFAS3 Collections</fullName>
            </value>
            <value>
                <fullName>ACH Processing Co</fullName>
                <isActive>false</isActive>
                <label>ACH Processing Co</label>
            </value>
            <value>
                <fullName>ACH.com</fullName>
                <isActive>false</isActive>
                <label>ACH.com</label>
            </value>
            <value>
                <fullName>ACHWorks</fullName>
                <isActive>false</isActive>
                <label>ACHWorks</label>
            </value>
            <value>
                <fullName>ACHeck21</fullName>
                <isActive>false</isActive>
                <label>ACHeck21</label>
            </value>
            <value>
                <fullName>Forte</fullName>
                <isActive>false</isActive>
                <label>Forte</label>
            </value>
            <value>
                <fullName>PaySafe</fullName>
                <isActive>false</isActive>
                <label>PaySafe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>